# Raytracer

./: .gitignore  README.md  Raytracer.sln
Raytracer/: CMakeLists.txt  Camera.cpp  Camera.h  Checkerboard.cpp  Checkerboard.h  Color.cpp  Color.h  IntersectData.cpp  IntersectData.h  KdInterior.cpp  KdInterior.h  KdLeaf.cpp  KdLeaf.h  KdNode.cpp  KdNode.h  KdTreeBuilder.cpp  KdTreeBuilder.h  LightSource.cpp  LightSource.h  Material.cpp  Material.h  Object.cpp  Object.h  Phong-Blinn.cpp  Phong-Blinn.h  Phong.cpp  Phong.h  PhongBlinn.cpp  PhongBlinn.h  Plane.cpp  Plane.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Ray.cpp  Ray.h  Raytracer.vcxproj  Raytracer.vcxproj.filters  Source.cpp  (+17 more)
checkpoints/Raytrace-Assn-1/: Discovered Scene Values.txt
checkpoints/advAssignment-KD-Tree/: ExecutionTimes.txt
